--- a/src/app/rooms/rooms.component.html
+++ b/src/app/rooms/rooms.component.html
@@ -11,35 +11,28 @@
 
 {{rooms?.availableRooms ?? 'No rooms'}}
 
+
+
 <!-- {{roomList | json}} -->
+
+
 
 <div *ngIf="rooms.availableRooms > 0">
     Rooms list
+    {{title}}
     <!-- {{roomList}} -->
-    <table>
-        <tr>
-            <th>Index</th>
-            <th>Even / odd</th>
-            <th>Room Number</th>
-            <th>Room Type</th>
-            <th>Room Price</th>
-            <th>Room Amenities</th>
-            <th>CheckIn Time</th>
-            <th>CheckOut Time</th>
-        </tr>
-        <!-- ngfor -->
-        <tr [ngClass]="e ? 'even' : 'odd'" *ngFor="let room of roomList | slice : 0:3; let e = even; let o = odd; let i = index">
-            <td>{{i | percent}}</td>
-            <td>{{ e ? "Even" : "Odd"}}</td>
-            <td>{{room.roomNumber}}</td>
-            <td>{{room.rommType}}</td>
-            <td>{{room.price | currency: 'INR'}}</td>
-            <td>{{room.amenities | titlecase}}</td>
-            <td>{{room.checkInTime | date : 'dd/MM/yyy'}}</td>
-            <td>{{room.checkOutTime | date : 'dd/MM/yyy'}}</td>
-        </tr>
-    </table>
+    <!-- //parent to child communication -->
+    <!-- //child to parent communication  -->
+    <app-rooms-list [rooms]="roomList" (selectedRoom)="selectRoom($event)" [title]="title"></app-rooms-list>
+   
 </div>
+
+
+
+<div *ngIf="selectedRoom">
+    {{selectedRoom | json}}
+</div>
+
 
 <!-- eventbinding -->
 <button class="btn btn-primary" (click)="toggle()">Toggle</button>
