--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,8 @@
-<h1>hello world</h1>
 <app-rooms></app-rooms>
+
+<div #name>
+
+</div>
 
 <!-- <div [ngSwitch]="loginTypes">
     <div *ngSwitchCase="'user'">
