--- a/src/app/rooms/rooms.component.html
+++ b/src/app/rooms/rooms.component.html
@@ -1,5 +1,7 @@
-<p>rooms works!</p>
-<h1>Welcome to {{hotelname}}</h1>
+
+<!-- <h1>Welcome to {{hotelname}}</h1> -->
+
+<app-header></app-header>
 
 <!-- ngstyle -->
 <div [hidden]="hideRooms">
