--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,10 @@
 <app-rooms></app-rooms>
+<!-- <app-container>
+    <app-rooms></app-rooms>
+    <app-employee></app-employee>
+    <h1>this is from ng-content</h1>
 
+</app-container> -->
 <div #name>
 
 </div>
