material ui , routing , wild card route, paramMap

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,12 @@
-<app-rooms></app-rooms>
+
+<app-app-nav></app-app-nav>
+
+<!-- <a routerLink="rooms">Rooms</a>
+<a routerLink="employee">Employee</a> -->
+
+<!-- <router-outlet></router-outlet> -->
+
+<!-- <app-rooms></app-rooms>
 <app-container>
     <app-rooms></app-rooms>
     <app-employee></app-employee>
@@ -7,7 +15,7 @@
 </app-container>
 <div #name>
 
-</div>
+</div> -->
 
 <!-- <div [ngSwitch]="loginTypes">
     <div *ngSwitchCase="'user'">
