--- a/src/app/rooms/rooms.component.html
+++ b/src/app/rooms/rooms.component.html
@@ -1,4 +1,4 @@
-
+<div class="container">
 <!-- <h1>Welcome to {{hotelname}}</h1> -->
 
 <app-header></app-header>
@@ -41,7 +41,7 @@
     {{selectedRoom | json}}
 </div>
 
-<button class="btn btn-primary" (click)="addRoom()">Add Room</button>
+<button class="btn btn-primary" routerLink="add">Add Room</button>
 
 <button class="btn btn-primary" (click)="editRoom()">Edit Room</button>
 
@@ -52,3 +52,10 @@
 <button class="btn btn-primary" (click)="toggle()">Toggle</button>
 
 {{totalBytes}}
+
+</div>
+
+<br>
+<div class="container">
+    <router-outlet></router-outlet>
+</div>
