--- a/src/app/booking/booking.component.html
+++ b/src/app/booking/booking.component.html
@@ -1,1 +1,214 @@
-<p>booking works!</p>
+<div class="container">
+  {{ bookingForm.value | json }}
+
+  {{ bookingForm.pristine | json }}
+
+  {{ bookingForm.dirty | json }}
+
+  <form [formGroup]="bookingForm" (ngSubmit)="addBooking()">
+    <div class="container">
+      <mat-form-field class="example-full-width">
+        <mat-label>Room Id</mat-label>
+        <input
+          type="test"
+          matInput
+          formControlName="roomId"
+          placeholder="Room Id"
+        />
+        <!-- <mat-error
+              *ngIf="
+                emailFormControl.hasError('email') &&
+                !emailFormControl.hasError('required')
+              "
+            >
+              Please enter a valid email address
+            </mat-error>
+            <mat-error *ngIf="emailFormControl.hasError('required')">
+              Email is <strong>required</strong>
+            </mat-error> -->
+      </mat-form-field>
+      <mat-form-field class="example-full-width">
+        <mat-label>Name</mat-label>
+        <input
+          type="text"
+          matInput
+          formControlName="guestName"
+          placeholder="Provide Your Name"
+        />
+      </mat-form-field>
+
+      <mat-form-field class="example-full-width">
+        <mat-label>Email</mat-label>
+        <input
+          type="email"
+          matInput
+          formControlName="guestEmail"
+          placeholder="Provide an Email"
+        />
+      </mat-form-field>
+      <mat-form-field class="example-full-width">
+        <mat-label>Mobile Number</mat-label>
+        <input
+          type="number"
+          matInput
+          formControlName="mobileNumber"
+          placeholder="Provide your Mobile Number"
+        />
+      </mat-form-field>
+      <mat-form-field class="example-full-width">
+        <mat-label>Booking Amount</mat-label>
+        <input
+          type="number"
+          matInput
+          formControlName="bookingAmount"
+          placeholder="provide your booking Amount"
+        />
+      </mat-form-field>
+      <mat-form-field class="example-full-width">
+        <mat-label>Check in Date</mat-label>
+        <input
+          matInput
+          [matDatepicker]="picker"
+          formControlName="checkindate"
+        />
+        <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+        <mat-datepicker #picker></mat-datepicker>
+      </mat-form-field>
+      <mat-form-field class="example-full-width">
+        <mat-label>Check out Date</mat-label>
+        <input
+          matInput
+          [matDatepicker]="picker"
+          formControlName="checkoutdate"
+        />
+        <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+        <mat-datepicker #picker></mat-datepicker>
+      </mat-form-field>
+      <mat-form-field class="example-full-width">
+        <mat-label>booking Date</mat-label>
+        <input
+          matInput
+          [matDatepicker]="picker"
+          formControlName="bookingDate"
+        />
+        <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+        <mat-datepicker #picker></mat-datepicker>
+      </mat-form-field>
+    </div>
+
+    <div class="container" formGroupName="address">
+      <mat-accordion class="example-headers-align" multi>
+        <mat-expansion-panel>
+          <mat-expansion-panel-header>
+            <mat-panel-title> Address </mat-panel-title>
+          </mat-expansion-panel-header>
+
+          <mat-form-field class="example-full-width">
+            <mat-label>Address Line 1</mat-label>
+            <input
+              type="text"
+              matInput
+              formControlName="addressLine1"
+              placeholder="Address Line 1"
+            />
+          </mat-form-field>
+
+          <mat-form-field class="example-full-width">
+            <mat-label>Address Line 2</mat-label>
+            <input
+              type="text"
+              matInput
+              formControlName="addressLine2"
+              placeholder="Address Line 2"
+            />
+          </mat-form-field>
+
+          <mat-form-field class="example-full-width">
+            <mat-label>City</mat-label>
+            <input
+              type="text"
+              matInput
+              formControlName="city"
+              placeholder="City"
+            />
+          </mat-form-field>
+
+          <mat-form-field class="example-full-width">
+            <mat-label>State</mat-label>
+            <input
+              type="text"
+              matInput
+              formControlName="state"
+              placeholder="State"
+            />
+          </mat-form-field>
+
+          <mat-form-field class="example-full-width">
+            <mat-label>Country</mat-label>
+            <input
+              type="text"
+              matInput
+              formControlName="country"
+              placeholder="Country"
+            />
+          </mat-form-field>
+
+          <mat-form-field class="example-full-width">
+            <mat-label>Zip Code</mat-label>
+            <input
+              type="text"
+              matInput
+              formControlName="zipcode"
+              placeholder="Zip Code"
+            />
+          </mat-form-field>
+        </mat-expansion-panel>
+      </mat-accordion>
+    </div>
+
+    <div>
+      <button
+        mat-raised-button
+        color="primary"
+        type="button"
+        (click)="addGuest()"
+      >
+        Add Guest
+      </button>
+    </div>
+
+    <div class="container" formArrayName="guests">
+      <mat-accordion class="example-headers-align" multi>
+        <mat-expansion-panel>
+          <mat-expansion-panel-header>
+            <mat-panel-title> Guests </mat-panel-title>
+          </mat-expansion-panel-header>
+          <div *ngFor="let guest of guests.controls; let i = index">
+            <div [formGroupName]="i">
+              <mat-form-field class="example-full-width">
+                <input
+                  type="text"
+                  matInput
+                  formControlName="guestName"
+                  placeholder="Guest Name"
+                />
+              </mat-form-field>
+              <mat-form-field class="example-full-width">
+                <input
+                  type="number"
+                  matInput
+                  formControlName="age"
+                  placeholder="Age"
+                />
+              </mat-form-field>
+            </div>
+          </div>
+        </mat-expansion-panel>
+      </mat-accordion>
+    </div>
+
+    <div>
+      <button mat-raised-button color="primary">Book Room</button>
+    </div>
+  </form>
+</div>
