--- a/src/app/booking/booking.component.html
+++ b/src/app/booking/booking.component.html
@@ -48,17 +48,6 @@
           formControlName="roomId"
           placeholder="Room Id"
         />
-        <!-- <mat-error
-              *ngIf="
-                emailFormControl.hasError('email') &&
-                !emailFormControl.hasError('required')
-              "
-            >
-              Please enter a valid email address
-            </mat-error>
-            <mat-error *ngIf="emailFormControl.hasError('required')">
-              Email is <strong>required</strong>
-            </mat-error> -->
       </mat-form-field>
       <mat-form-field class="example-full-width">
         <mat-label>Name</mat-label>
@@ -68,6 +57,10 @@
           formControlName="guestName"
           placeholder="Provide Your Name"
         />
+        <!-- {{bookingForm.get('guestName')?.errors | json}} -->
+        <mat-error *ngIf="bookingForm.get('guestName')?.hasError('minlength')">
+          Guest Name should be minimum 5 characters
+        </mat-error>
       </mat-form-field>
 
       <mat-form-field class="example-full-width">
@@ -114,16 +107,15 @@
           [matDatepicker]="piicker"
           formControlName="checkoutdate"
         />
-        <mat-datepicker-toggle matSuffix [for]="piicker"></mat-datepicker-toggle>
+        <mat-datepicker-toggle
+          matSuffix
+          [for]="piicker"
+        ></mat-datepicker-toggle>
         <mat-datepicker #piicker></mat-datepicker>
       </mat-form-field>
       <mat-form-field class="example-full-width">
         <mat-label>booking Date</mat-label>
-        <input
-          matInput
-          [matDatepicker]="pcker"
-          formControlName="bookingDate"
-        />
+        <input matInput [matDatepicker]="pcker" formControlName="bookingDate" />
         <mat-datepicker-toggle matSuffix [for]="pcker"></mat-datepicker-toggle>
         <mat-datepicker #pcker></mat-datepicker>
       </mat-form-field>
@@ -144,6 +136,14 @@
               formControlName="addressLine1"
               placeholder="Address Line 1"
             />
+            <!-- {{bookingForm.get('address.addressLine1')?.errors | json}} -->
+            <mat-error
+              *ngIf="
+                bookingForm.get('address.addressLine1')?.hasError('required')
+              "
+            >
+              Address Line 1 is required
+            </mat-error>
           </mat-form-field>
 
           <mat-form-field class="example-full-width">
@@ -225,6 +225,14 @@
                   formControlName="guestName"
                   placeholder="Guest Name"
                 />
+                <!-- {{bookingForm.get(['guests',i,'guestName'])?.errors | json}} -->
+            <mat-error
+            *ngIf="
+              bookingForm.get(['guests',i,'guestName'])?.hasError('required')
+            "
+          >
+            Guest Name is required
+          </mat-error>
               </mat-form-field>
               <mat-form-field class="example-full-width">
                 <input
@@ -252,10 +260,18 @@
       </mat-accordion>
     </div>
     <div>
-        <mat-checkbox class="example-margin" formControlName="tnc">Terms and Conditions</mat-checkbox>
+      <mat-checkbox class="example-margin" formControlName="tnc"
+        >Terms and Conditions</mat-checkbox
+      >
     </div>
     <div>
-      <button [disabled]="bookingForm.invalid" mat-raised-button color="primary">Book Room</button>
+      <button
+        [disabled]="bookingForm.invalid"
+        mat-raised-button
+        color="primary"
+      >
+        Book Room
+      </button>
     </div>
   </form>
 </div>
