valueChanges updateOn to see changing form values

--- a/src/app/rooms/room-add/room-add.component.html
+++ b/src/app/rooms/room-add/room-add.component.html
@@ -32,6 +32,7 @@
         type="text"
         name="roomType"
         [(ngModel)]="room.roomType"
+        [ngModelOptions]="{updateOn:'blur'}"
       />
       <br />
     </div>
