--- a/src/app/booking/booking.component.html
+++ b/src/app/booking/booking.component.html
@@ -1,9 +1,9 @@
 <div class="container">
-  {{ bookingForm.value | json }}
+  <!-- {{ bookingForm.value | json }}
 
   {{ bookingForm.pristine | json }}
 
-  {{ bookingForm.dirty | json }}
+  {{ bookingForm.dirty | json }} -->
 
   <div>
     <button
