--- a/src/app/rooms/room-add/room-add.component.html
+++ b/src/app/rooms/room-add/room-add.component.html
@@ -1,11 +1,11 @@
 <div class="container">
   <!-- {{room | json}} -->
 
-  {{ roomsForm.pristine | json }}
+  <!-- {{ roomsForm.pristine | json }}
   {{ roomsForm.dirty | json }}
   {{ roomsForm.valid | json }}
   {{ roomsForm.invalid | json }}
-  {{ roomsForm.value | json }}
+  {{ roomsForm.value | json }} -->
 
   <div *ngIf="successMessage !== ''" class="alert alert-success">
     {{ successMessage }}
