--- a/src/app/rooms/rooms.component.html
+++ b/src/app/rooms/rooms.component.html
@@ -25,7 +25,8 @@
 
 </h1> -->
 
-<div *ngIf="rooms.availableRooms > 0">
+<!-- <div *ngIf="rooms.availableRooms > 0"> -->
+<div *ngIf="rooms$| async as rooms">
     Rooms list
     <!-- {{title}} -->
     <!-- {{roomList}} -->
