--- a/src/app/rooms/rooms-list/rooms-list.component.html
+++ b/src/app/rooms/rooms-list/rooms-list.component.html
@@ -12,7 +12,7 @@
     <!-- ngfor -->
     <!-- data coming from parent in for loop -->
     <!-- <tr [ngClass]="e ? 'even' : 'odd'" *ngFor="let room of rooms | slice : 0:3; let e = even; let o = odd; let i = index"> -->
-    <tr [ngClass]="e ? 'even' : 'odd'" *ngFor="let room of rooms; let e = even; let o = odd; let i = index">
+    <tr [ngClass]="e ? 'even' : 'odd'" *ngFor="let room of rooms | filter : price; let e = even; let o = odd; let i = index">
         <td>{{i | percent}}</td>
         <td>{{ e ? "Even" : "Odd"}}</td>
         <td>{{room.roomNumber}}</td>
